--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TravelWorthy</title>
+    <title>St.Patricks</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
